히카리 커넥션풀 연결

--- a/wired/src/main/resources/application.properties
+++ b/wired/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mvc.view.suffix=.jsp
 #mapper location settings
 #mybatis.config-location=classpath:/config/mybatis/oracle/mybatis-config.xml
 #mybatis.mapper-locations=classpath:/config/mybatis/mapper/oracle/*.xml
-#mybatis.type-aliases-package=com.it.herb
+#mybatis.type-aliases-package=com.gr.wired
 
 
 spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
