에플리케이셔 프로퍼티스 커밋

--- a/wired/src/main/resources/application.properties
+++ b/wired/src/main/resources/application.properties
@@ -16,13 +16,13 @@ spring.mvc.view.suffix=.jsp
 #mapper location settings
 #mybatis.config-location=classpath:/config/mybatis/oracle/mybatis-config.xml
 #mybatis.mapper-locations=classpath:/config/mybatis/mapper/oracle/*.xml
-#mybatis.type-aliases-package=com.it.herb
+#mybatis.type-aliases-package=com.gr.wired
 
 
 spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@LAPTOP-VFU6I5H3:1521:xe
-spring.datasource.hikari.username=herb
-spring.datasource.hikari.password=herb123
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@DESKTOP-4SEK6QO:1521:xe
+spring.datasource.hikari.username=wired
+spring.datasource.hikari.password=wired123
 spring.datasource.hikari.connection-test-query=SELECT sysdate FROM dual
 
 #MyBatis
