--- a/wired/src/main/resources/application.properties
+++ b/wired/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@LAPTOP-VFU6I5H3:1521:xe
-#spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@DESKTOP-4SEK6QO:1521:xe
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@DESKTOP-4SEK6QO:1521:xe
 #spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@KGcom:1521:xe
 #spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@pys:1521:xe
 spring.datasource.hikari.username=wired
