--- a/wired/src/main/resources/application.properties
+++ b/wired/src/main/resources/application.properties
@@ -34,8 +34,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#spring.mail.username=email address
-#spring.mail.password=pwd
+#spring.mail.username=
+#spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
